# snark-cpp

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  bigint_8cpp.html  bigint_8cpp__incl.dot  bigint_8cpp_source.html  bigint_8hpp.html  bigint_8hpp__dep__incl.dot  bigint_8hpp__incl.dot  bigint_8hpp_source.html  class_big_int-members.html  class_big_int.html  class_big_int_a8fed86fdeaf3db9fc8d97c8991bc4542_icgraph.dot  class_big_int_abffb27755e91d2640e4d08f32f88aad1_icgraph.dot  class_polynomial-members.html  class_polynomial.html  class_polynomial__coll__graph.dot  class_polynomial_ac796159642183ada90df566d46ba524d_icgraph.dot  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  interpolation_8cpp.html  interpolation_8cpp__incl.dot  interpolation_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  interpolation_8cpp_af8ceb9c4119532f9e3227121cc03063f_cgraph.dot  interpolation_8cpp_af8ceb9c4119532f9e3227121cc03063f_icgraph.dot  interpolation_8cpp_source.html  mainpage_8hpp.html  mainpage_8hpp_source.html  menudata.js  polynomial_8cpp.html  polynomial_8cpp__incl.dot  (+21 more)
docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  (+25 more)
include/: ecc.hpp  mainpage.hpp  polynomial.hpp
src/: bigint.cpp  ecc.cpp  interpolation.cpp  polynomial.cpp  test.cpp
